[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rapyer"
version = "1.0.1"
description = "Pydantic models with Redis as the backend"
authors = ["YedidyaHKfir <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/YedidyaHKfir/rapyer"
repository = "https://github.com/YedidyaHKfir/rapyer"
documentation = "https://github.com/YedidyaHKfir/rapyer"
packages = [{include = "rapyer"}]
keywords = ["redis", "pydantic", "orm", "database", "async", "nosql", "cache", "key-value", "data-modeling", "python", "backend", "storage", "serialization", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
redis = { version = ">=6.4.0", extras = ["async"] }
pydantic = ">=2.11.9"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"

[tool.coverage.run]
source = ["rapyer"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

