[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rapyer"
version = "1.1.1"
description = "Pydantic models with Redis as the backend"
authors = [{name = "YedidyaHKfir", email = "yedidyakfir@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
keywords = [
    "redis",
    "redis-json",
    "pydantic",
    "pydantic-v2",
    "orm",
    "database",
    "async",
    "nosql",
    "cache",
    "key-value",
    "data-modeling",
    "python",
    "backend",
    "storage",
    "serialization",
    "validation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: AsyncIO",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis[async]>=6.0.0, <7.1.0",
    "pydantic>=2.11.0, <2.13.0",
]

[project.urls]
Homepage = "https://yedidyakfir.github.io/rapyer/"
Documentation = "https://yedidyakfir.github.io/rapyer/"
Repository = "https://github.com/yedidyakfir/rapyer"
"Source Code" = "https://github.com/yedidyakfir/rapyer"
"Bug Tracker" = "https://github.com/yedidyakfir/rapyer/issues"
"Changelog" = "https://github.com/yedidyakfir/rapyer/releases"

[tool.poetry]
packages = [{include = "rapyer"}]


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mypy = "^1.0.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"

[tool.coverage.run]
source = ["rapyer"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
